src/tests/fixtures/type_definitions/TypeFromClassDefinitionImplementsInterfaceWithDeprecatedTag.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface */
interface Person {
  /** @gqlField */
  hello: string;
}

/**
 * @gqlType
 * @gqlImplements Person
 */
export default class User {
  readonly __typename = "User" as const;
  /** @gqlField */
  hello: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions/TypeFromClassDefinitionImplementsInterfaceWithDeprecatedTag.invalid.ts:9:4 - error: `@gqlImplements` has been deprecated. Instead use `class MyType implements MyInterface`.

 9  * @gqlImplements Person
      ~~~~~~~~~~~~~~~~~~~~~
10  */
   ~
src/tests/fixtures/type_definitions/TypeFromClassDefinitionImplementsInterfaceWithDeprecatedTag.invalid.ts:9:5 - error: `@gqlImplements` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`, `@gqlContext`.

9  * @gqlImplements Person
      ~~~~~~~~~~~~~
